fix: content overflow issue

--- a/documentation/style.css
+++ b/documentation/style.css
@@ -143,6 +143,7 @@ p {
 	width: 100%;
 	height: 100%;
 	max-width: 95rem;
+	overflow: auto;
 }
 
 .snippet iframe {
